novu-helm-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novu
  namespace: novu
spec:
  ingressClassName: traefik

  rules:
  - host: novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-dashboard
            port:
              number: 4000

  - host: api.novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-api
            port:
              number: 3000

  - host: ws.novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-ws
            port:
              number: 3002
