novu-helm-chart/templates/novu-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novu-alb
  namespace: novu
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: /v1/health-check
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:your_region:your_account_number:certificate/your_certificate_id
    # alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb

  rules:
  - host: novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-dashboard
            port:
              number: 4000

  - host: api.novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-api
            port:
              number: 3000

  - host: ws.novuoncloud.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novu-ws
            port:
              number: 3002
